[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Dialog/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Characters/Chrysalis/Sprites/Dialog/Dialog.0000.png" type="Texture" id=2]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/Sound/SimpleDialogSound.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.254902 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Dialog" type="Node2D"]
script = ExtResource( 1 )

[node name="DPic" type="Sprite" parent="."]
position = Vector2( 40, 820 )
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 200, 200 )

[node name="DBG" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="pnText" type="Panel" parent="."]
margin_left = 300.0
margin_top = 820.0
margin_right = 1885.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 2 )

[node name="DText" type="Label" parent="pnText"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true

[node name="NextEntry" type="Timer" parent="."]

[node name="NextLetter" type="Timer" parent="."]
wait_time = 0.05

[node name="LetterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
bus = "Music"

[connection signal="timeout" from="NextEntry" to="." method="_on_NextEntry_timeout"]
[connection signal="timeout" from="NextLetter" to="." method="_on_NextLetter_timeout"]
